--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,76 @@
-asgiref==3.3.1
+asgiref==3.7.2
 astroid==2.4.2
-Django==3.1.5
+async-generator==1.10
+attrs==23.1.0
+backports.zoneinfo==0.2.1
+cachecontrol==0.13.1
+cachetools==5.3.1
+certifi==2021.10.8
+cffi==1.15.1
+charset-normalizer==2.0.12
+cryptography==41.0.3
+Django==4.0.5
 django-cors-headers==3.7.0
+django-crontab==0.7.1
+django-debug-toolbar==3.5.0
 django-ipware==3.0.2
-mysql-connector-python @ http://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.0.4.zip
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+et-xmlfile==1.1.0
+exceptiongroup==1.1.1
+firebase-admin==6.2.0
+google-api-core==2.11.1
+google-api-python-client==2.95.0
+google-auth==2.22.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.3
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.10.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.60.0
+grpcio==1.56.2
+grpcio-status==1.56.2
+h11==0.14.0
+httplib2==0.22.0
+idna==3.3
+lazy-object-proxy==1.4.3
+linkhub==1.5.0
+MarkupSafe==2.1.3
+msgpack==1.0.5
+mysql-connector-python==2.0.4
 mysqlclient==2.0.3
-Pillow==8.1.0
+numpy==1.22.3
+openpyxl==3.0.10
+outcome==1.2.0
+pandas==1.4.2
+pillow==10.2.0
+popbill==1.58.0
+proto-plus==1.22.3
+protobuf==4.23.4
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pyfcm==1.5.4
+PyJWT==2.8.0
+pyparsing==3.1.1
+PySocks==1.7.1
 python-dateutil==2.8.1
-pytz==2020.5
+pytz==2024.1
 pyupbit==0.2.10
 PyYAML==5.3.1
+requests==2.27.1
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+sqlparse==0.4.4
+trio==0.22.0
+trio-websocket==0.10.2
+typing==3.7.4.3
+typing-extensions==4.9.0
+uritemplate==4.1.1
+urllib3==1.26.9
+websockets==10.3
+wrapt==1.14.0
+wsproto==1.2.0
