--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
 asgiref==3.7.2
 astroid==2.4.2
 async-generator==1.10
+async-timeout==4.0.3
 attrs==23.1.0
 backports.zoneinfo==0.2.1
 cachecontrol==0.13.1
@@ -14,11 +19,13 @@ django-cors-headers==3.7.0
 django-crontab==0.7.1
 django-debug-toolbar==3.5.0
 django-ipware==3.0.2
+django-redis==5.4.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 et-xmlfile==1.1.0
 exceptiongroup==1.1.1
-firebase-admin==6.5.0
+firebase-admin==6.2.0
+frozenlist==1.4.1
 google-api-core==2.11.1
 google-api-python-client==2.95.0
 google-auth==2.22.0
@@ -38,6 +45,7 @@ lazy-object-proxy==1.4.3
 linkhub==1.5.0
 MarkupSafe==2.1.3
 msgpack==1.0.5
+multidict==6.1.0
 mysql-connector-python==8.0.5
 mysqlclient==2.0.3
 numpy==1.22.3
@@ -46,6 +54,7 @@ outcome==1.2.0
 pandas==1.4.2
 pillow==10.2.0
 popbill==1.58.0
+propcache==0.2.0
 proto-plus==1.22.3
 protobuf==4.23.4
 pyasn1==0.5.0
@@ -59,6 +68,7 @@ python-dateutil==2.8.1
 pytz==2024.1
 pyupbit==0.2.10
 PyYAML==5.3.1
+redis==5.1.1
 requests==2.27.1
 rsa==4.9
 six==1.16.0
@@ -67,6 +77,7 @@ sortedcontainers==2.4.0
 sqlparse==0.4.4
 trio==0.22.0
 trio-websocket==0.10.2
+twilio==9.3.4
 typing==3.7.4.3
 typing-extensions==4.9.0
 uritemplate==4.1.1
@@ -74,3 +85,4 @@ urllib3==1.26.9
 websockets==10.3
 wrapt==1.14.0
 wsproto==1.2.0
+yarl==1.15.2
